# PortIntel

./: .gitignore  LICENSE  README.md  create_icons.js  index.html  package-lock.json  package.json  tailwind.config.js  train_model.py  vite.config.ts
public/: manifest.json
src/: App.tsx  aiService.ts  index.css  main.tsx  mockTauri.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: port_classifier_importance.onnx  port_classifier_safety.onnx
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
