[package]
name = "port-intel"
version = "0.1.0"
description = "AI-Powered Port Manager"
authors = ["PortIntel Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-onnx = "0.21"
ndarray = "0.15"
tiny_http = "0.12"


[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
panic = "abort" # Strip expensive panic messages
codegen-units = 1 # Maximize binary optimization
lto = true # Link-time optimization
opt-level = "z" # Optimize for size
strip = true # Strip symbols

